force-app/main/default/objects/ccrz__E_Menu__c/ccrz__E_Menu__c.object-meta.xml
<CustomObject>
    <description>The E_Menu__c object contains the header data of the Menu Link. Please Note: Unless Menu Cache is re-generated, any changes made to the data in this object will not reflect on the UI.</description>
    <label>CC Menu</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>CC Menu Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Menu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>