force-app/main/default/objects/ccrz__E_Menu__c/fields/B2B_Account_Menu_Control__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Menu_Control__c</fullName>
    <description>Related to B2B Accounts - Must be populated to control which menus will be displayed</description>
    <inlineHelpText>Related to B2B Accounts - Must be populated to control which menus will be displayed</inlineHelpText>
    <label>B2B Account Menu Control</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>B2B_Account_Menu_Control</valueSetName>
    </valueSet>
</CustomField>