force-app/main/default/objects/ccrz__E_Menu__c/fields/ccrz__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayName__c</fullName>
    <description>Display Name of the Menu.</description>
    <label>DisplayName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>