force-app/main/default/objects/ccrz__E_Menu__c/fields/ccrz__Enabled__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag determining whether or not this Menu record is active.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>