force-app/main/default/objects/ccrz__E_Menu__c/fields/ccrz__LocationType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LocationType__c</fullName>
    <description>Deprecated.</description>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
            <value>
                <fullName>Left Nav</fullName>
            </value>
            <value>
                <fullName>Right Nav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>