force-app/main/default/objects/ccrz__E_Menu__c/fields/ccrz__MenuId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MenuId__c</fullName>
    <description>Menu External ID field used for data loading.</description>
    <externalId>true</externalId>
    <label>MenuId</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>