force-app/main/default/objects/ccrz__E_Menu__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Sequence in which the Menu links should be displayed. Menu Record with the smallest sequence is displayed first, starting from the left in desktop view, and starting from the top in tablet/mobile view.</description>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>