force-app/main/default/objects/ccrz__E_Menu__c/fields/ccrz__StoreID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StoreID__c</fullName>
    <defaultValue>&quot;DefaultStore&quot;</defaultValue>
    <description>Storefront Name, for eg. DefaultStore. This field holds ONLY one Storefront Name.</description>
    <label>Store ID</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>