force-app/main/default/objects/ccrz__E_Menu__c/fields/ccrz__URL__c.field-meta.xml
<CustomField>
    <fullName>ccrz__URL__c</fullName>
    <description>This field is referenced to construct the URL of this Menu Link, if Link Type is set to URL. It can be a relative or an absolute URL.</description>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>