force-app/main/default/objects/ccrz__E_Menu__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__DisplayName__c</columns>
    <columns>ccrz__Product__c</columns>
    <columns>ccrz__Category__c</columns>
    <columns>ccrz__Enabled__c</columns>
    <columns>ccrz__URL__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <columns>B2B_Account_Menu_Control__c</columns>
    <columns>ccrz__StoreID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>