force-app/main/default/objects/ccrz__E_Menu__c/listViews/ccrz__All1.listView-meta.xml
<ListView>
    <fullName>ccrz__All1</fullName>
    <columns>NAME</columns>
    <columns>B2B_Account_Menu_Control__c</columns>
    <columns>ccrz__DisplayName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>